<resources>

    <string name="app_name">PFly</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_archive">Archive</string>
    <string name="action_event">Event</string>
    <string name="action_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_filter">Filter</string>
    <string name="action_delete">Delete</string>

    <!-- Menu navigation -->
    <string name="nav_my_tasks">My tasks</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_advanced_search">Advanced search</string>
    <string name="nav_logout">Logout</string>

    <!-- Tabs -->
    <string name="all_tasks">All tasks</string>
    <string name="archived_tasks">Archived tasks</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="no_projects">No projects</string>
    <string name="no_tasks">No tasks</string>

    <string name="logout">Logout</string>
    <string name="loginText">Please login with your Google Account</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <string name="hint_username">Username</string>
    <string name="hint_mail">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <!-- Hint while creating task -->
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_desired_outcome">Desired outcome</string>
    <string name="hint_dateCreated">Created on</string>
    <string name="hint_dateFinished">Finished on</string>
    <string name="hint_lastResponsibleMoment">Last responsible moment</string>
    <string name="hint_deadline">Deadline</string>
    <string name="hint_recommended_action">Recommended action</string>


    <string name="hint_reminder_date">Reminder date</string>

    <string name="hint_associated_project">Project: </string>
    <string name="hint_action">Action:</string>
    <string name="hint_assigned_user">Assign to:</string>
    <string name="hint_depend_on">Dependent to:</string>

    <string name="hint_int_importance">Internal importance</string>
    <string name="hint_ext_importance">External Importance</string>
    <string name="hint_closeness">Closeness</string>
    <string name="hint_simplicity">Simplicity</string>
    <string name="hint_clearness">Clearness</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_weight_switch">Fly characteristic weight</string>
    <string name="pref_single_point_weight">Use single point weight</string>
    <string name="pref_range_weight">Use range for weight</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_int_importance">Internal importance</string>
    <string name="pref_header_ext_importance">External importance</string>
    <string name="pref_header_closeness">Closeness</string>
    <string name="pref_header_simplicity">Simplicity</string>
    <string name="pref_header_clearness">Clearness</string>


    <string name="pref_range_min_value">Range minimum value</string>
    <string name="pref_range_max_value">Range maximum value</string>
    <string name="pref_weight">Weight</string>

    <string name="pref_list_limit">Task limit value</string>


    <string name="reminder_date">Reminder date</string>
    <string name="new_reminder">New reminder</string>
    <string name="new_project">New project</string>

    <string name="no_task">No dependent task</string>
    <string name="no_project">Not assigned to project</string>
    <string name="no_user">Not assigned to user</string>




</resources>
