<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$IntImportancePreferenceFragment"
        android:title="@string/pref_header_int_importance" />

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$ExtImportancePreferenceFragment"
        android:title="@string/pref_header_ext_importance" />

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$ClosenessPreferenceFragment"
        android:title="@string/pref_header_closeness" />

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$SimplicityPreferenceFragment"
        android:title="@string/pref_header_simplicity" />

    <header
        android:fragment="com.unisofia.fmi.pfly.ui.activity.SettingsActivity$ClearnessPreferenceFragment"
        android:title="@string/pref_header_clearness" />
</preference-headers>
