<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:key="clearnessMinPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_min_value" />

    <EditTextPreference
        android:defaultValue="2"
        android:inputType="number"
        android:key="clearnessMaxPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_max_value" />

    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:key="clearnessWeightPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_weight" />
</PreferenceScreen>
