<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="5"
        android:inputType="number"
        android:key="closenessMinPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_min_value" />

    <EditTextPreference
        android:defaultValue="6"
        android:inputType="number"
        android:key="closenessMaxPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_max_value" />

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="closenessWeightPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_weight" />
</PreferenceScreen>
