<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="simplicityMinPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_min_value" />

    <EditTextPreference
        android:defaultValue="4"
        android:inputType="number"
        android:key="simplicityMaxPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_max_value" />

    <EditTextPreference
        android:defaultValue="2"
        android:inputType="number"
        android:key="simplicityWeightPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_weight" />
</PreferenceScreen>
