<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="8"
        android:inputType="number"
        android:key="extImportanceMinPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_min_value" />

    <EditTextPreference
        android:defaultValue="9"
        android:inputType="number"
        android:key="extImportanceMaxPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_max_value" />

    <EditTextPreference
        android:defaultValue="5"
        android:inputType="number"
        android:key="extImportanceWeightPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_weight" />
</PreferenceScreen>
