<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="12"
        android:inputType="number"
        android:key="intImportanceMinPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_min_value" />

    <EditTextPreference
        android:defaultValue="13"
        android:inputType="number"
        android:key="intImportanceMaxPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_range_max_value" />

    <EditTextPreference
        android:defaultValue="8"
        android:inputType="number"
        android:key="intImportanceWeightPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_weight" />
</PreferenceScreen>
