<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PFlyApp">

    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/search_white_mobile"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="true"/>

    <item
        android:id="@+id/filter_tasks"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        android:icon="@drawable/filter"
        android:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort_tasks"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/sort_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/refresh_tasks"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/refresh"
        android:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />
</menu>
