<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/taskId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_desired_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/desired_outcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_desired_outcome"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_notes"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/intImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_int_importance" />

        <CheckBox
            android:id="@+id/extImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_ext_importance" />

        <CheckBox
            android:id="@+id/closeness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_closeness" />

        <CheckBox
            android:id="@+id/simplicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_simplicity" />

        <CheckBox
            android:id="@+id/clearness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_clearness" />

        <TextView
            android:id="@+id/fly_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/hint_dateCreated"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dateFinised"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dateFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_dateFinished"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_deadline"
                android:inputType="date" />/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/dependOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TableLayout
            android:id="@+id/rangesLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:visibility="gone">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/intImportanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hint_int_importance"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/intImportanceBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_max="15"
                    app:dsb_min="2" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/extImportanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hint_ext_importance"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/extImportanceBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_max="15"
                    app:dsb_min="2" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/closenessLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hint_closeness"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/closenessBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_max="15"
                    app:dsb_min="2" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/simplicityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hint_simplicity"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/simplicityBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_max="15"
                    app:dsb_min="2" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/clearnessLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hint_clearness"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/clearnessBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>



    </LinearLayout>


</LinearLayout>
